--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body style= "background-color: #F7CABE;">
 
         <h1 style= "font-size: 45px;"> Allison Rich </h1>
-        <p><img src="me.JPG" width="400"height="300"></p>
+        <p><img src="Me.JPG" width="400"height="300"></p>
 
 
         <p> I was born in Boston, MA on October 21, 1999.
